--- a/index.html
+++ b/index.html
@@ -3,40 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Улучшенный Trello</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <title>Trello Clone</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="app">
       <header>
-        <h1><i class="fas fa-trello"></i> Моя доска задач</h1>
+        <h1><i class="fas fa-trello"></i> Trello Clone</h1>
         <div class="controls">
           <button id="add-column-btn">
-            <i class="fas fa-plus"></i> Колонка
-          </button>
-          <button id="save-board-btn">
-            <i class="fas fa-save"></i> Сохранить
+            <i class="fas fa-plus"></i> Добавить колонку
           </button>
         </div>
       </header>
 
       <div class="board" id="board"></div>
-
-      <div id="modal" class="modal">
-        <div class="modal-content">
-          <span class="close-btn">&times;</span>
-          <h3 id="modal-title"></h3>
-          <div id="modal-body"></div>
-          <div class="modal-actions">
-            <button id="modal-submit">OK</button>
-            <button id="modal-cancel">Отмена</button>
-          </div>
-        </div>
-      </div>
     </div>
 
     <script type="module" src="js/app.js"></script>
