--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="app">
       <header>
-        <h1><i class="fas fa-trello"></i> Trello Clone</h1>
+        <h1><i class="fas fa-smile"></i> Trello с АЛИЭКСПРЕСС</h1>
         <div class="controls">
           <button id="add-column-btn">
             <i class="fas fa-plus"></i> Добавить колонку
