--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trello Clone</title>
+    <title>Trello</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -13,10 +13,10 @@
   <body>
     <div class="app">
       <header>
-        <h1><i class="fas fa-smile"></i> Trello с АЛИЭКСПРЕСС</h1>
+        <h1><i class="fas fa-smile"></i> Trello with aliexpress</h1>
         <div class="controls">
           <button id="add-column-btn">
-            <i class="fas fa-plus"></i> Добавить колонку
+            <i class="fas fa-plus"></i> Add a column
           </button>
         </div>
       </header>
